@@ -1,6 +1,7 @@
 package PU.pushop.review.service;
 
 
+import PU.pushop.global.authorization.MemberAuthorizationUtil;
 import PU.pushop.members.entity.Member;
 import PU.pushop.members.repository.MemberRepositoryV1;
 import PU.pushop.payment.entity.PaymentHistory;
@@ -8,16 +9,21 @@ import PU.pushop.payment.repository.PaymentRepository;
 import PU.pushop.product.entity.Product;
 import PU.pushop.product.repository.ProductRepositoryV1;
 import PU.pushop.review.entity.Review;
+import PU.pushop.review.model.ReviewCreateDto;
 import PU.pushop.review.model.ReviewDto;
 import PU.pushop.review.repository.ReviewRepository;
+import PU.pushop.reviewImg.ReviewImg;
+import PU.pushop.reviewImg.ReviewImgRepository;
+import PU.pushop.reviewImg.ReviewImgService;
 import lombok.RequiredArgsConstructor;
+import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 
-import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.*;
+
+import static PU.pushop.global.ResponseMessageConstants.*;
 
 @Service
 @RequiredArgsConstructor
@@ -27,27 +33,38 @@ public class ReviewService {
     public final ReviewRepository reviewRepository;
     public final ProductRepositoryV1 productRepository;
     public final MemberRepositoryV1 memberRepository;
+    public final ModelMapper modelMapper;
+    public final ReviewImgService reviewImgService;
+    public final ReviewImgRepository reviewImgRepository;
 
     /**
      * 리뷰 작성
-     * @param review reviewTitle, reviewContent, rating
+     * @param request reviewTitle, reviewContent, rating
      * @param paymentId
      * @return
      */
-    public Review createReview(Review review, Long paymentId) {
+    public Review createReview(ReviewCreateDto request, List<MultipartFile> images, Long paymentId) {
         PaymentHistory paymentHistory = paymentRepository.findById(paymentId)
                 .orElseThrow(() -> new NoSuchElementException("해당 주문 내역을 찾을 수 없습니다."));
 
         // 이미 Review가 존재하는지 확인
-        Optional<Review> existingReview = reviewRepository.findByPaymentHistory(paymentHistory);
-        if (existingReview.isPresent()) {
+        if (Boolean.TRUE.equals(paymentHistory.getReview())) {
             throw new IllegalStateException("이미 후기가 작성되었습니다.");
         }
+
+        Review review = modelMapper.map(request, Review.class);
+
         review.setPaymentHistory(paymentHistory);
         reviewRepository.save(review);
-
+        
+        // 결제내역에서 리뷰 작성 여부 true 로 변환
         paymentHistory.setReview(true);
 
+        // 이미지파일에 이미지가 있을 경우에만
+        if (!Objects.equals(images.get(0).getOriginalFilename(), "")) {
+            // 이미지 업로드
+            reviewImgService.uploadReviewImg(review.getReviewId(), images.stream().toList());
+        }
         return review;
     }
 
@@ -60,7 +77,7 @@ public class ReviewService {
        /* if (reviews.isEmpty()) {
             throw new IllegalStateException("리뷰가 없습니다.");
         }*/
-        return reviews.stream().map(ReviewDto::new).collect(Collectors.toList());
+        return reviews.stream().map(ReviewDto::new).toList();
     }
 
     /**
@@ -70,15 +87,15 @@ public class ReviewService {
      */
     public List<ReviewDto> findReviewByProduct(Long productId) {
         Product product = productRepository.findByProductId(productId)
-                .orElseThrow(() -> new NoSuchElementException("상품을 찾을 수 없습니다."));
+                .orElseThrow(() -> new NoSuchElementException(PRODUCT_NOT_FOUND));
 
         List<Review> reviews = reviewRepository.findByPaymentHistoryProduct(product);
 
         if (reviews.isEmpty()) {
-            throw new IllegalStateException("리뷰가 없습니다.");
+            throw new IllegalStateException(WRITING_NOT_FOUND);
         }
 
-        return reviews.stream().map(ReviewDto::new).collect(Collectors.toList());
+        return reviews.stream().map(ReviewDto::new).toList();
     }
 
     /**
@@ -88,15 +105,15 @@ public class ReviewService {
      */
     public List<ReviewDto> findReviewByUser(Long memberId) {
         Member member = memberRepository.findById(memberId)
-                .orElseThrow(() -> new NoSuchElementException("회원을 찾을 수 없습니다."));
+                .orElseThrow(() -> new NoSuchElementException(MEMBER_NOT_FOUND));
 
         List<Review> reviews = reviewRepository.findByPaymentHistoryMember(member);
 
         if (reviews.isEmpty()) {
-            throw new IllegalStateException("리뷰가 없습니다.");
+            throw new IllegalStateException(WRITING_NOT_FOUND);
         }
 
-        return reviews.stream().map(ReviewDto::new).collect(Collectors.toList());
+        return reviews.stream().map(ReviewDto::new).toList();
     }
 
     /**
@@ -106,32 +123,35 @@ public class ReviewService {
      */
     public ReviewDto reviewDetail(Long reviewId) {
         Review review = reviewRepository.findById(reviewId)
-                .orElseThrow(() -> new NoSuchElementException("해당 후기를 찾을 수 없습니다."));
+                .orElseThrow(() -> new NoSuchElementException(WRITING_NOT_FOUND));
 
-        ReviewDto reviewDetail = new ReviewDto(review);
-
-        return reviewDetail;
+        return new ReviewDto(review);
     }
 
     /**
      * 리뷰 수정
-     * @param updatedReview
+     * @param updateRequest
      * @param reviewId
      * @return
      */
-    public Review updateReview(Review updatedReview, Long reviewId, Long memberId) {
+    public Review updateReview(ReviewCreateDto updateRequest, Long reviewId, Long memberId) {
 
         Review currentReview = reviewRepository.findById(reviewId)
-                .orElseThrow(() -> new NoSuchElementException("해당 후기를 찾을 수 없습니다."));
+                .orElseThrow(() -> new NoSuchElementException(WRITING_NOT_FOUND));
 
         Long reviewWriterId = currentReview.getPaymentHistory().getMember().getId();
 
-        if (!memberId.equals(reviewWriterId)) {
-            throw new SecurityException("접근 권한이 없습니다.");
+        Review updatedreview = modelMapper.map(updateRequest, Review.class);
+
+        // 로그인 중인 유저의 memberId 찾기
+        Long loginMemberId = MemberAuthorizationUtil.getLoginMemberId();
+
+        if (!loginMemberId.equals(memberId) || !memberId.equals(reviewWriterId)) {
+            throw new SecurityException(ACCESS_DENIED);
         }
 
-        currentReview.setReviewContent(updatedReview.getReviewContent());
-        currentReview.setRating(updatedReview.getRating());
+        currentReview.setReviewContent(updatedreview.getReviewContent());
+        currentReview.setRating(updatedreview.getRating());
 
         return reviewRepository.save(currentReview);
     }
@@ -142,11 +162,29 @@ public class ReviewService {
      */
     public void deleteReview(Long reviewId, Long memberId) {
         Review currentReview = reviewRepository.findById(reviewId)
-                .orElseThrow(() -> new NoSuchElementException("글을 찾을 수 없습니다."));
+                .orElseThrow(() -> new NoSuchElementException(WRITING_NOT_FOUND));
         Long reviewWriterId = currentReview.getPaymentHistory().getMember().getId();
 
-        if (!memberId.equals(reviewWriterId)) {
-            throw new SecurityException("접근 권한이 없습니다.");
+        PaymentHistory paymentHistory = currentReview.getPaymentHistory();
+
+        paymentHistory.setReview(false);
+
+        // 로그인 중인 유저의 memberId 찾기
+        Long loginMemberId = MemberAuthorizationUtil.getLoginMemberId();
+
+        if (!loginMemberId.equals(memberId) || !memberId.equals(reviewWriterId)) {
+            throw new SecurityException(ACCESS_DENIED);
+        }
+
+        List<ReviewImg> reviewImgList = reviewImgRepository.findByReview_ReviewId(reviewId);
+        System.out.println("dlalwl" + reviewImgList);
+
+        if (reviewImgList != null) {
+            for (ReviewImg reviewImg : reviewImgList) {
+                reviewImgRepository.delete(reviewImg);
+                String imagePath = "src/main/resources/static" + reviewImg.getReviewImgPath();
+                ReviewImgService.deleteImageFile(imagePath);
+            }
         }
 
         reviewRepository.delete(currentReview);
